--- a/START.HTML
+++ b/START.HTML
@@ -1,11 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="veiwport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" href="https://api.logobank.uz/media/logos_preview/AmirSoy-01_LgPh84i.png">
+    <link rel="stylesheet" href="./START.CSS"> 
 </head>
 <body>
-    
+    <header class="header">
+        <h1 class="h1">WEATHER TEMPLATE</h1>
+    </header>
+    <main class="weather">
+        <article class="content">
+            <section class="monday_card">
+                <div class="monday_card_header">
+                    <p>MONDAY</p>
+                    <button class="button">X</button>
+                </div>
+                <hr>
+                <div class="monday_card_date">
+                    <p>JUNE 10</p>
+                    <p>07:00 AM</p>
+                </div>
+                <hr>
+                <section class="monday_card_info">
+                    <div class="monday_card_img">
+                        <div class="lu">
+                        <img src="1x/sun1.png" alt="" width="" height="">
+                        <img src="1x/1x/2.png" alt="" width="px" height="px" style="margin-top: 10px;">
+                        </div>
+                        <div class="monday_card_info_p">
+                            <p style="color: #047D9C;">SW 14-20 KM/H</p>
+                        </div>
+                    </div>
+                    <div class="monday_card_gradus"> 
+                        <div class="LOL">
+                            <p class="p1">25^С</p>
+                            <p style="text-align: center;">LONDON</p>
+                        </div>
+                        <p>Humidity 70%</p>
+                    </div>
+                </section>
+                <hr>
+                <footer class="monday_card_footer">
+                    <div class="lol2">
+                    YOUR SAMPLE TEXT GOES HERE
+                    <p>Your sample text goes here</p>
+                </div>
+                </footer>
+            </section>
+            <section class="lo">
+                <div class="la">
+                    <p>TUESDAY</p>
+                    <img src="1x/sunny.png" alt="">
+                    <p>20^</p>
+                </div>
+                <div class="la">
+                    <p>FRIDAY</p>
+                    <img src="1x/shower.png" alt="">
+                    <p>16^</p>
+                </div>
+                <div class="la">
+                    <p>WEDNESDAY</p>
+                    <img src="1x/cloudy.png" alt="">
+                    <p>17^</p>
+                </div>
+                <div class="la">
+                    <p>SATURDAY</p>
+                    <img src="1x/lightning.png" alt="">
+                    <p>10^</p>
+                </div>
+                <div class="la">
+                    <p>THUSDAY</p>
+                    <img src="1x/rain.png" alt="">
+                    <p>15^</p>
+                </div>
+                <div class="la">
+                    <p>SUNDAY</p>
+                    <img src="1x/sunny.png" alt="">
+                    <p>18^</p>
+                </div>
+                <section class="strelochki">
+                    <div class="li">
+                        <img src="1x/1x/1.png" alt="">
+                        <img src="1x/1x/2.png" alt="">
+                        <img src="1x/1x/3.png" alt="">
+                        <img src="1x/1x/4.png" alt="">
+                        <img src="1x/1x/5.png" alt="">
+                        <img src="1x/1x/6.png" alt="">
+                        <img src="1x/1x/7.png" alt="">
+                        <img src="1x/1x/8.png" alt="">
+                    </div>
+                </section>
+            </section>
+        </article>
+        <section class="footer">
+            <div class="soloshko_i_oblochki">
+                <img src="1x/sun1.png" alt="">
+                <img src="1x/sunny.png" alt="">
+                <img src="1x/cloudy.png" alt="">
+                <img src="1x/rain.png" alt="">
+                <img src="1x/shower.png" alt="">
+                <img src="1x/lightning.png" alt="">
+                <img src="1x/1x/Ресурс 22.png" alt="">
+                <img src="1x/1x/Ресурс 23.png" alt="">
+            </div>
+        </section>
+        <footer class="gg">
+            <p class="pizdec">
+                disained by buvъny ami
+            </p>
+        </footer>
+    </main>
 </body>
-</html>
