--- a/START.HTML
+++ b/START.HTML
@@ -51,47 +51,47 @@
                 </footer>
             </section>
             <section class="lo">
-                <div class="la">
-                    <p>TUESDAY</p>
-                    <img src="1x/sunny.png" alt="">
-                    <p>20^</p>
-                </div>
-                <div class="la">
-                    <p>FRIDAY</p>
-                    <img src="1x/shower.png" alt="">
-                    <p>16^</p>
-                </div>
-                <div class="la">
-                    <p>WEDNESDAY</p>
-                    <img src="1x/cloudy.png" alt="">
-                    <p>17^</p>
-                </div>
-                <div class="la">
-                    <p>SATURDAY</p>
-                    <img src="1x/lightning.png" alt="">
-                    <p>10^</p>
-                </div>
-                <div class="la">
-                    <p>THUSDAY</p>
-                    <img src="1x/rain.png" alt="">
-                    <p>15^</p>
-                </div>
-                <div class="la">
-                    <p>SUNDAY</p>
-                    <img src="1x/sunny.png" alt="">
-                    <p>18^</p>
-                </div>
-                <section class="strelochki">
-                    <div class="li">
-                        <img src="1x/1x/1.png" alt="">
-                        <img src="1x/1x/2.png" alt="">
-                        <img src="1x/1x/3.png" alt="">
-                        <img src="1x/1x/4.png" alt="">
-                        <img src="1x/1x/5.png" alt="">
-                        <img src="1x/1x/6.png" alt="">
-                        <img src="1x/1x/7.png" alt="">
-                        <img src="1x/1x/8.png" alt="">
+                <section class="other-days">
+                    <div class="la">
+                        <p>TUESDAY</p>
+                        <img src="1x/sunny.png" alt="">
+                        <p>20^</p>
                     </div>
+                    <div class="la">
+                        <p>FRIDAY</p>
+                        <img src="1x/shower.png" alt="">
+                        <p>16^</p>
+                    </div>
+                    <div class="la">
+                        <p>WEDNESDAY</p>
+                        <img src="1x/cloudy.png" alt="">
+                        <p>17^</p>
+                    </div>
+                    <div class="la">
+                        <p>SATURDAY</p>
+                        <img src="1x/lightning.png" alt="">
+                        <p>10^</p>
+                    </div>
+                    <div class="la">
+                        <p>THUSDAY</p>
+                        <img src="1x/rain.png" alt="">
+                        <p>15^</p>
+                    </div>
+                    <div class="la">
+                        <p>SUNDAY</p>
+                        <img src="1x/sunny.png" alt="">
+                        <p>18^</p>
+                    </div>
+                </section>
+                <section class="strelochki">               
+                    <img src="1x/1x/1.png" alt="">
+                    <img src="1x/1x/2.png" alt="">
+                    <img src="1x/1x/3.png" alt="">
+                    <img src="1x/1x/4.png" alt="">
+                    <img src="1x/1x/5.png" alt="">
+                    <img src="1x/1x/6.png" alt="">
+                    <img src="1x/1x/7.png" alt="">
+                    <img src="1x/1x/8.png" alt="">    
                 </section>
             </section>
         </article>
@@ -114,3 +114,4 @@
         </footer>
     </main>
 </body>
+</html>
